k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: resume-site
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - resume.nonagonmedia.net
      secretName: resume-tls
  rules:
    - host: resume.nonagonmedia.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wagtail
                port:
                  number: 80
